<?xml version="1.0"?>
<package format="3">
  <name>vehicle_test</name>
  <version>0.0.0</version>
  <description>Simple test node for driving the F1TENTH vehicle</description>

  <maintainer email="ethan@example.com">ethan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
